tests/machine/x/go/inner_join.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/inner_join.go:10:17: undefined: CustomersItem
tests/machine/x/go/inner_join.go:13:5: undefined: CustomersItem
tests/machine/x/go/inner_join.go:16:5: undefined: CustomersItem
tests/machine/x/go/inner_join.go:21:14: undefined: OrdersItem
tests/machine/x/go/inner_join.go:22:3: undefined: OrdersItem
tests/machine/x/go/inner_join.go:27:3: undefined: OrdersItem
tests/machine/x/go/inner_join.go:32:3: undefined: OrdersItem
tests/machine/x/go/inner_join.go:37:3: undefined: OrdersItem
tests/machine/x/go/inner_join.go:43:21: undefined: Result
tests/machine/x/go/inner_join.go:44:16: undefined: Result
tests/machine/x/go/inner_join.go:44:16: too many errors
